# pybotx-smartapp-rpc

./: README.md  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: actions.yml
pybotx_smartapp_rpc/: __init__.py  empty_args.py  exception_handlers.py  exceptions.py  openapi_utils.py  pydantic_v1_override.py  router.py  rpc.py  smartapp.py  typing.py
pybotx_smartapp_rpc/fastapi_utils/: custom_openapi.py  security.py
pybotx_smartapp_rpc/middlewares/: empty_args_middleware.py  exception_middleware.py
pybotx_smartapp_rpc/models/: errors.py  method.py  model_field.py  request.py  responses.py
pybotx_smartapp_rpc/openapi/: openapi.py  utils.py
scripts/: format  lint  test
tests/: conftest.py  factories.py  test_exception_middleware.py  test_middlewares.py  test_openapi.py  test_rpc_calls.py  test_rpc_router.py  test_security.py  test_smartapp.py  test_tooling_stack.py
