[tool.poetry]
name = "pybotx-smartapp-rpc"
version = "0.12.0"
description = "eXpress SmartApp JSON-RPC library"
authors = ["Arseniy Zhiltsov <arseniy.zhiltsov@ccsteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

pydantic = ">=2.8.2,<3.0"
pybotx = "~0.76.0a1"
deepdiff = "^8.6.0"

fastapi = { version = "~0.115.1", optional = true }

[tool.poetry.extras]
fastapi_utils = ["fastapi"]

[tool.poetry.group.dev.dependencies]

mypy = "1.16.1"
ruff = "0.12.0"


pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core >=1.6.0"]
build-backend = "poetry.core.masonry.api"
