[tool.poetry]
name = "pybotx-smartapp-rpc"
version = "0.12.0"
description = "eXpress SmartApp JSON-RPC library"
authors = ["Arseniy Zhiltsov <arseniy.zhiltsov@ccsteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

pydantic = ">=1.6.0,<1.11.0"
pybotx = "~0.75.0"

[tool.poetry.dev-dependencies]
add-trailing-comma = "3.1.0"
black = "25.1.0"
isort = "6.0.1"
autoflake = "2.3.1"
mypy = "1.15.0"
wemake-python-styleguide = "0.19.2"

pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-cov = "6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
