[tool.poetry]
name = "pybotx-smartapp-rpc"
version = "0.13.0"
description = "eXpress SmartApp JSON-RPC library"
authors = ["Arseniy Zhiltsov <arseniy.zhiltsov@ccsteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

pydantic = ">=2.12.5,<3.0.0"
pybotx = "~0.76.0"

[tool.poetry.group.dev.dependencies]
add-trailing-comma = "3.1.0"
mypy = "1.15.0"
ruff = "0.11.13"

pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-cov = "6.1.1"
pytest-mock = "3.14.0"
pytest-xdist = "3.6.1"
freezegun = "1.5.1"
factory-boy = "3.3.1"
faker = "37.3.0"
deepdiff = "8.5.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
